--- a/angular-training/sales-project/src/app/sales-person-list/sales-person-list.component.html
+++ b/angular-training/sales-project/src/app/sales-person-list/sales-person-list.component.html
@@ -1,5 +1,19 @@
-<p>sales-person-list works!</p>
+<table border="1">
+    <thead>
+        <tr>
+            <th>First Name</th>
+            <th>Last Name</th>
+            <th>Email</th>
+            <th>Number Stuff</th>
+        </tr>
+    </thead>
 
-<p>
-    {{ salesPersonList[0].firstName }} {{ salesPersonList[0].lastName }}
-</p>
+    <tbody>
+        <tr *ngFor="let tempSalesPerson of salesPersonList">
+            <td>{{ tempSalesPerson.firstName }}</td>
+            <td>{{ tempSalesPerson.lastName }}</td>
+            <td>{{ tempSalesPerson.email }}</td>
+            <td>{{ tempSalesPerson.salesVolume }}</td>
+        </tr>
+    </tbody>
+</table>
