added new column for the table

--- a/angular-training/sales-project/src/app/sales-person-list/sales-person-list-bootstrap.component.html
+++ b/angular-training/sales-project/src/app/sales-person-list/sales-person-list-bootstrap.component.html
@@ -5,6 +5,7 @@
             <th>Last Name</th>
             <th>Email</th>
             <th>Number Stuff</th>
+            <th>Met Quota</th>
         </tr>
     </thead>
 
@@ -13,6 +14,7 @@
             <td>{{ tempSalesPerson.firstName }}</td>
             <td>{{ tempSalesPerson.lastName }}</td>
             <td>{{ tempSalesPerson.email }}</td>
+            <td>{{ tempSalesPerson.salesVolume }}</td>
             <td>{{ tempSalesPerson.salesVolume }}</td>
         </tr>
     </tbody>
