--- a/angular-training/player-stats/src/app/player-stats-list/player-stats-list.component.html
+++ b/angular-training/player-stats/src/app/player-stats-list/player-stats-list.component.html
@@ -1,9 +1,11 @@
-<table >
-    <thead>
-        <th>First Names</th>
-        <th>Last Name</th>
-        <th>User Name</th>
-        <th>Points</th>
+<table class="table table-hover">
+    <thead class="table-dark">
+        <tr>            
+            <th>First Name</th>
+            <th>Last Name</th>
+            <th>User Name</th>
+            <th>Points</th>
+        </tr>
     </thead>
 
     <tbody>
