--- a/ecommerce-project/03-frontend/angular-ecommerce/src/app/components/product-list/product-list-table.component.html
+++ b/ecommerce-project/03-frontend/angular-ecommerce/src/app/components/product-list/product-list-table.component.html
@@ -1,6 +1,7 @@
 <table class="table">
     <thead class="thead-dark">
         <tr>
+            <th></th>
             <th>Name</th>
             <th>Price</th>
             <th>Units In Stock</th>
@@ -8,12 +9,12 @@
     </thead>
     <tbody>
         <tr *ngFor="let tempProduct of products">
-            <td>
+            <td class="align-middle">
                 <img src="{{ tempProduct.imageUrl }}" height="50">
             </td>
-            <td>{{ tempProduct.name }}</td>
-            <td>{{ tempProduct.unitPrice | currency:'USD' }}</td>
-            <td>{{ tempProduct.unitsInStock }}</td>
+            <td class="align-middle">{{ tempProduct.name }}</td>
+            <td class="align-middle">{{ tempProduct.unitPrice | currency:'USD' }}</td>
+            <td class="align-middle">{{ tempProduct.unitsInStock }}</td>
         </tr>
     </tbody>
 </table>
